--- a/index.html
+++ b/index.html
@@ -67,61 +67,6 @@
     margin-top: 0.5rem;
   }
 
-  /* 로고 스타일 수정 - 배경 제거, 글씨 검정 */
-  .navbar-brand {
-    background: none !important;
-    color: #000000 !important;
-    font-size: 1.1rem !important;
-    font-weight: 600 !important;
-    padding: 0 !important;
-    display: flex;
-    align-items: baseline;
-    gap: 0.4rem;
-    flex-wrap: wrap;
-    line-height: 1.1;
-  }
-
-  .navbar-brand:hover,
-  .navbar-brand:focus {
-    color: #000000 !important;
-  }
-
-  .navbar-brand .brand-acronym, .navbar-brand .brand-lab {
-    font-size: 2em;
-    font-weight: 700;
-    color: #0E4A84 !important;
-  }
-
-  .navbar-brand .brand-text {
-    font-size: 1.1rem;
-    color: #000000 !important;
-  }
-
-  .navbar-brand .university-text {
-    color: #000000 !important;
-  }
-  
-  .navbar-brand::before,
-  .navbar-brand::after {
-    display: none !important;
-  }
-
-  #ftco-navbar {
-    background-color: #ffffff !important;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-  }
-
-  /* Menu item 스타일 */
-  .navbar-nav .nav-link {
-    font-size: 0.9rem !important;
-    font-weight: 500 !important;
-  }
-
-  /* 민트색 컬러 포인트 추가 */
-  .navbar-nav .nav-link:hover {
-    color: #0E4A84 !important;
-  }
-
   .btn-primary {
     background-color: #0E4A84 !important;
     border-color: #0E4A84 !important;
@@ -208,28 +153,6 @@
     }
   }
 
-  /* 네비게이션 링크 크기 조정 */
-  .navbar-nav .nav-link {
-    font-size: 0.9rem !important;
-    font-weight: 500 !important;
-  }
-
-
-  .navbar-nav .dropdown-menu {
-    border-radius: 0.5rem;
-    border: 1px solid rgba(0, 0, 0, 0.08);
-  }
-
-  .navbar-nav .dropdown-toggle::after {
-    display: none;
-  }
-
-  @media (min-width: 992px) {
-    .navbar-nav .dropdown:hover > .dropdown-menu {
-      display: block;
-    }
-  }
-
   /* 히어로 섹션 타이포그래피 */
   .hero-wrap h1 {
     font-size: 3.5rem !important;
@@ -291,10 +214,10 @@
   }
 
   .hero-logo {
-    width: 140px;
-    height: 140px;
+    width: 280px;
+    height: 280px;
     object-fit: contain;
-    margin: 0 auto 0.8rem auto;
+    margin: 0 auto 0.05rem auto !important;
   }
 
   /* 히어로 섹션을 단색 배경으로 정리 */
@@ -473,7 +396,7 @@
 
   .hero-title-break {
     display: block;
-    height: 0.6rem;
+    height: 0.2rem;
   }
 
   .hero-lab-pill {
@@ -743,51 +666,6 @@
       font-size: 14px;
     }
 
-    /* 모바일 navbar 텍스트 색상 수정 */
-    #ftco-navbar .navbar-nav .nav-link {
-      color: #000000 !important;
-      font-size: 0.9rem !important;
-      font-weight: 700 !important;
-    }
-
-    .navbar-toggler {
-      border-color: #000000 !important;
-      color: #000000 !important;
-    }
-
-    .navbar-toggler .oi,
-    .navbar-toggler span,
-    .navbar-toggler .menu-text {
-      color: #000000 !important;
-    }
-
-    .navbar-toggler-icon {
-      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 0, 0, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
-    }
-
-    /* 모바일에서 navbar 브랜드 크기 조정 */
-    .navbar-brand .brand-acronym, .navbar-brand .brand-lab {
-      font-size: 1.5em !important;
-    }
-
-    .navbar-brand .brand-text {
-      font-size: 0.9rem !important;
-    }
-
-    /* 모바일에서 University 단어 숨기기 */
-    .university-text {
-      display: none !important;
-    }
-
-    /* 모바일에서 펼쳐진 메뉴 배경색 투명도 추가 */
-    .navbar-collapse {
-      background-color: rgba(243, 246, 251, 0.85) !important;
-      margin-top: 1rem;
-      padding: 1rem;
-      border-radius: 0.5rem;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    }
-
     /* 모바일에서 News 카드 세로 배치 */
     .news-item {
       flex-direction: column;
@@ -802,12 +680,6 @@
 
     .news-item > div {
       width: 100%;
-    }
-
-    /* 모바일 navbar height 조정 */
-    #ftco-navbar {
-      padding-top: 1rem !important;
-      padding-bottom: 1rem !important;
     }
 
     /* Hero 섹션 텍스트 크기 축소 */
@@ -836,7 +708,7 @@
     }
 
     .hero-title-break {
-      height: 0.4rem;
+      height: 0.15rem;
     }
 
     .hero-lab-pill {
@@ -845,9 +717,9 @@
     }
 
     .hero-logo {
-      width: 100px !important;
-      height: 100px !important;
-      margin-bottom: 0.5rem !important;
+      width: 180px !important;
+      height: 180px !important;
+      margin-bottom: 0.05rem !important;
     }
 
     /* Scroll down 영역에 여백 추가 */
@@ -903,7 +775,7 @@
 			<div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
 				<div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
 					<div class="text text-center hero-text">
-						<img src="images/HYU_logo_singlecolor_png.png" alt="Hanyang University" class="hero-logo img-fluid">
+						<img src="images/04_text_symbol_original.png" alt="IDEA LAB logo" class="hero-logo img-fluid">
 						<span class="hero-title-break"></span>
 <!--						<span class="subheading">Hello! Here is</span>-->
 <!--						<h1 class="hero-title"><span class="hero-idea">IDEA LAB</span></h1>-->
