--- a/join-us.html
+++ b/join-us.html
@@ -31,62 +31,6 @@
       color: #333;
     }
 
-    .navbar-brand {
-      background: none !important;
-      color: #000000 !important;
-      font-size: 1.1rem !important;
-      font-weight: 600 !important;
-      padding: 0 !important;
-      display: flex;
-      align-items: baseline;
-      gap: 0.4rem;
-      flex-wrap: wrap;
-      line-height: 1.1;
-    }
-
-    .navbar-brand .brand-acronym, .navbar-brand .brand-lab {
-      font-size: 2em;
-      font-weight: 700;
-      color: #0E4A84 !important;
-    }
-
-    .navbar-brand .brand-text {
-      font-size: 1.1rem;
-      color: #000000 !important;
-    }
-
-    .navbar-brand .university-text {
-      color: #000000 !important;
-    }
-
-    .navbar-brand::before,
-    .navbar-brand::after {
-      display: none !important;
-    }
-
-    .navbar-nav .nav-link {
-      font-size: 0.9rem !important;
-      font-weight: 500 !important;
-    }
-
-    .navbar-nav .nav-link:hover {
-      color: #0E4A84 !important;
-    }
-
-    .navbar-nav .dropdown-menu {
-      border-radius: 0.5rem;
-      border: 1px solid rgba(0, 0, 0, 0.08);
-    }
-
-    .navbar-nav .dropdown-toggle::after {
-      display: none;
-    }
-
-    #ftco-navbar {
-      background-color: #ffffff !important;
-      border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-    }
-
     #join-section {
       padding-top: 6rem;
       padding-bottom: 4rem;
@@ -203,52 +147,6 @@
 
     /* 모바일 반응형 */
     @media (max-width: 768px) {
-      #ftco-navbar .navbar-nav .nav-link {
-        color: #000000 !important;
-        font-size: 0.9rem !important;
-        font-weight: 700 !important;
-      }
-
-      .navbar-toggler {
-        border-color: #000000 !important;
-        color: #000000 !important;
-      }
-
-      .navbar-toggler .oi,
-      .navbar-toggler span,
-      .navbar-toggler .menu-text {
-        color: #000000 !important;
-      }
-
-      .navbar-toggler-icon {
-        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 0, 0, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
-      }
-
-      .navbar-brand .brand-acronym, .navbar-brand .brand-lab {
-        font-size: 1.5em !important;
-      }
-
-      .navbar-brand .brand-text {
-        font-size: 0.9rem !important;
-      }
-
-      .university-text {
-        display: none !important;
-      }
-
-      .navbar-collapse {
-        background-color: rgba(243, 246, 251, 0.85) !important;
-        margin-top: 1rem;
-        padding: 1rem;
-        border-radius: 0.5rem;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-      }
-
-      #ftco-navbar {
-        padding-top: 1rem !important;
-        padding-bottom: 1rem !important;
-      }
-
       .heading-section h2 {
         font-size: 1.5rem !important;
       }
@@ -272,13 +170,13 @@
         <div class="col-md-9 heading-section text-center ftco-animate">
           <span class="subheading">Join Us</span>
           <h2 class="mb-4">IDEA LAB 초기 멤버 모집</h2>
-          <p style="text-align:center; text-align-last:center;">AI 기술로 공학 설계의 패러다임을 바꿀 젊고 역동적인 연구실 IDEA LAB이 첫 발을 내디뎠습니다.<br>지능형 설계의 새로운 기준을 세우며, 연구실의 문화를 함께 정립해 나갈 주도적이고 열의 넘치는 동료를 찾습니다.</p>
+          <p style="text-align:center; text-align-last:center;">AI 기술로 공학 설계의 패러다임을 바꿀 젊고 역동적인 연구실 IDEA LAB이 첫 발을 내디뎠습니다.<br>AI 설계의 새로운 기준을 세우며, 연구실의 문화를 함께 정립해 나갈 주도적이고 열의 넘치는 동료를 환영합니다.</p>
         </div>
       </div>
       <div class="row justify-content-center">
         <div class="col-lg-10 ftco-animate">
           <div class="contact-card">
-            <p style="text-align:center; text-align-last:center;">모집 관련 문의나 상담을 원하시면 간단한 자기 소개 및 관심 분야를 <a href="mailto:sunwoongy@hanyang.ac.kr">sunwoongy@hanyang.ac.kr</a> 로 보내주세요.</p>
+            <p style="text-align:center; text-align-last:center;">모집 관련 상담을 원하시면 간단한 자기 소개 및 관심 분야를 <a href="mailto:sunwoongy@hanyang.ac.kr">sunwoongy@hanyang.ac.kr</a> 로 보내주세요.</p>
           </div>
         </div>
       </div>
@@ -294,7 +192,7 @@
 
             <div class="faq-item">
               <div class="faq-question">AI 경험이 있어야 지원할 수 있나요?</div>
-              <p><strong>AI 경험은 필수가 아닙니다.</strong> 지도교수는 석·박사와 박사후 연구원 시절까지 직접 AI 모델을 코딩해가며 기계·항공 분야에 특화된 AI 전문지식을 쌓았으며, <strong>AI를 처음 접하는 학생도 빠르게 성장하도록 노하우를 직접 전수</strong>합니다. <strong>수월한 의사소통 능력과 배우고자 하는 열의</strong>만 준비해주셔도 됩니다.</p>
+              <p><strong>AI 경험은 필수가 아닙니다.</strong> 지도교수는 석·박사와 박사후 연구원 시절까지 직접 AI 모델을 코딩해가며 기계·항공 분야에 특화된 AI 전문지식을 쌓았으며, 이를 바탕으로 <strong>AI를 처음 접하는 학생도 빠르게 실전 연구에 투입될 수 있도록 노하우를 직접 전수</strong>합니다. <strong>단, 수월한 의사소통 능력과 배우고자 하는 열의</strong>는 필수입니다.</p>
             </div>
 
             <div class="faq-item">
@@ -314,7 +212,7 @@
 
             <div class="faq-item">
               <div class="faq-question">입학 후 구체적인 연구 분야는 어떻게 정해지나요?</div>
-              <p><strong>우리 연구실은 지원자가 원하는 연구 분야에 최대한 맞춰 매칭하는 것을 원칙</strong>으로 합니다. 초기 상담을 통해 관심 영역과 커리어 목표를 충분히 공유한 뒤, 지도교수가 프로젝트와 협업 파트너를 직접 매칭합니다. 진행 중 상황에 따라 세부 주제가 조정될 수는 있지만, 사전에 충분히 협의하고 합의된 방향으로 연구를 이어가게 됩니다.</p>
+              <p><strong>우리 연구실은 지원자가 원하는 연구 분야에 맞춰 매칭하는 것을 원칙</strong>으로 합니다. 초기 상담을 통해 관심 영역과 목표 커리어를 충분히 공유한 뒤, 지도교수가 연구 과제와 협업 파트너를 직접 매칭합니다. 상황에 따라 주제의 변동이 있을 수는 있지만, 합의된 방향으로 연구를 이어가게 됩니다.</p>
             </div>
 
             <div class="faq-item">
