--- a/index.html
+++ b/index.html
@@ -214,10 +214,11 @@
   }
 
   .hero-logo {
-    width: 280px;
-    height: 280px;
+    width: 420px;
+    height: auto;
     object-fit: contain;
-    margin: 0 auto 0.05rem auto !important;
+    margin: 0 auto -0.15rem auto !important;
+    display: block;
   }
 
   /* 히어로 섹션을 단색 배경으로 정리 */
@@ -242,7 +243,7 @@
     position: relative;
     display: inline-block;
     padding: 0.5rem 1rem;
-    margin-top: 1.5rem;
+    margin-top: 0.3rem;
   }
 
   .hero-copy h2 {
@@ -276,8 +277,9 @@
 
   .hero-wrap h2.hero-brand {
     font-size: 1.5rem !important;
-    margin-top: 0 !important;
-    margin-bottom: 1.6rem !important;
+    margin-top: 0.1rem !important;
+    margin-bottom: 0.4rem !important;
+    padding-top: 0 !important;
   }
 
   .hero-wrap h2.hero-slogan {
@@ -395,8 +397,8 @@
   }
 
   .hero-title-break {
-    display: block;
-    height: 0.2rem;
+    display: none;
+    height: 0;
   }
 
   .hero-lab-pill {
@@ -708,7 +710,7 @@
     }
 
     .hero-title-break {
-      height: 0.15rem;
+      display: none;
     }
 
     .hero-lab-pill {
@@ -717,9 +719,9 @@
     }
 
     .hero-logo {
-      width: 180px !important;
-      height: 180px !important;
-      margin-bottom: 0.05rem !important;
+      width: 260px !important;
+      height: auto !important;
+      margin-bottom: -0.1rem !important;
     }
 
     /* Scroll down 영역에 여백 추가 */
@@ -775,7 +777,7 @@
 			<div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
 				<div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
 					<div class="text text-center hero-text">
-						<img src="images/04_text_symbol_original.png" alt="IDEA LAB logo" class="hero-logo img-fluid">
+						<img src="images/01_text_right_original.png" alt="IDEA LAB logo" class="hero-logo img-fluid">
 						<span class="hero-title-break"></span>
 <!--						<span class="subheading">Hello! Here is</span>-->
 <!--						<h1 class="hero-title"><span class="hero-idea">IDEA LAB</span></h1>-->
