--- a/news.html
+++ b/news.html
@@ -56,6 +56,19 @@
       background: #fff;
       box-shadow: 0 20px 45px rgba(15, 23, 42, 0.08);
       margin-bottom: 1rem;
+      transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease;
+      cursor: pointer;
+      text-decoration: none;
+      color: inherit;
+    }
+
+    .news-item:hover,
+    .news-item:focus {
+      transform: translateY(-4px);
+      box-shadow: 0 25px 55px rgba(15, 23, 42, 0.12);
+      background-color: rgba(5, 10, 30, 0.03);
+      text-decoration: none;
+      color: inherit;
     }
 
     .news-item img {
