--- a/index.html
+++ b/index.html
@@ -187,6 +187,11 @@
 
   .hero-subtitle .txt-fade {
     font-weight: 700 !important;
+    color: #17BDC6 !important;
+  }
+
+  .txt-fade-ai {
+    color: #17BDC6 !important;
   }
 
   .hero-color {
@@ -214,10 +219,10 @@
   }
 
   .hero-logo {
-    width: 420px;
+    width: 510px;
     height: auto;
     object-fit: contain;
-    margin: 0 auto -0.15rem auto !important;
+    margin: 0 auto 0.4rem auto !important;
     display: block;
   }
 
@@ -243,7 +248,7 @@
     position: relative;
     display: inline-block;
     padding: 0.5rem 1rem;
-    margin-top: 0.3rem;
+    margin-top: 4rem;
   }
 
   .hero-copy h2 {
@@ -277,7 +282,7 @@
 
   .hero-wrap h2.hero-brand {
     font-size: 1.5rem !important;
-    margin-top: 0.1rem !important;
+    margin-top: 0.4rem !important;
     margin-bottom: 0.4rem !important;
     padding-top: 0 !important;
   }
@@ -563,14 +568,18 @@
     background: #fff;
     margin-bottom: 1.2rem;
     box-shadow: 0 20px 45px rgba(15, 23, 42, 0.08);
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
+    transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease;
     text-decoration: none;
     color: inherit;
+    cursor: pointer;
   }
 
-  .news-item:hover {
+  .news-item:hover,
+  .news-item:focus {
     transform: translateY(-4px);
     box-shadow: 0 25px 55px rgba(15, 23, 42, 0.12);
+    background-color: rgba(5, 10, 30, 0.03);
+    text-decoration: none;
   }
 
   .news-item img {
@@ -719,9 +728,9 @@
     }
 
     .hero-logo {
-      width: 260px !important;
+      width: 340px !important;
       height: auto !important;
-      margin-bottom: -0.1rem !important;
+      margin-bottom: 0.4rem !important;
     }
 
     /* Scroll down 영역에 여백 추가 */
@@ -781,16 +790,10 @@
 						<span class="hero-title-break"></span>
 <!--						<span class="subheading">Hello! Here is</span>-->
 <!--						<h1 class="hero-title"><span class="hero-idea">IDEA LAB</span></h1>-->
-						<h2 class="hero-brand"><span class="letter-highlight">I</span>ntelligent <span class="letter-highlight">D</span>esign for <span class="letter-highlight">E</span>ngineering <span class="letter-highlight">A</span>pplications <span class="hero-lab-text">LAB</span></h2>
-						<!-- Original txt-rotate effect (commented out)
-						<h2> We are at the intersection of
-							<span class="txt-rotate" data-period="2000" data-speed="120" data-rotate='[ "Engineering Design &amp; AI"]'></span>
-						</h2>
-						-->
 						<div class="hero-copy">
-							<div class="hero-cloud"></div>
+							<!-- <div class="hero-cloud"></div> -->
 							<h2 class="hero-slogan">We shape <strong class="hero-color">IDEAs</strong> into<span class="hero-mobile-break"></span> <strong class="hero-color">IDEAL</strong> design solutions.</h2>
-						<h2 class="hero-subtitle">And &nbsp<strong><span class="txt-fade" data-texts='["\"AI\""]' data-fade-speed="40" data-wait="200" data-min-opacity="0.3"></span></strong>&nbsp is our design engine.</h2>
+						<h2 class="hero-subtitle">And <strong><span class="txt-fade txt-fade-ai" data-texts='["AI"]' data-fade-speed="27" data-wait="200" data-min-opacity="0.3"></span></strong> is our design engine.</h2>
 							</div>
 					</div>
 				</div>
