--- a/view-image.html
+++ b/view-image.html
@@ -40,7 +40,7 @@
       text-decoration: none;
       color: #fff;
       font-weight: 600;
-      background: #0E4A84;
+      background: #000;
       padding: 0.55rem 1.5rem;
       border-radius: 999px;
       display: inline-block;
