--- a/join-us.html
+++ b/join-us.html
@@ -176,7 +176,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-10 ftco-animate">
           <div class="contact-card">
-            <p style="text-align:center; text-align-last:center;">모집 관련 상담을 원하시면 간단한 자기 소개 및 관심 분야를 <a href="mailto:sunwoongy@hanyang.ac.kr">sunwoongy@hanyang.ac.kr</a> 로 보내주세요.</p>
+            <p style="text-align:center; text-align-last:center;">모집 관련 상담을 원하시면 간단한 자기 소개 및 관심 분야를<br><a href="mailto:sunwoongy@hanyang.ac.kr">sunwoongy@hanyang.ac.kr</a> 로 보내주세요.</p>
           </div>
         </div>
       </div>
