--- a/research.html
+++ b/research.html
@@ -46,7 +46,7 @@
     .research-hero h2 {
       font-size: 2rem;
       font-weight: 700;
-      color: #0E4A84;
+      color: #000;
     }
 
     .hero-statement {
