--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>IDEA LAB</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="icon" type="image/png" href="images/HYU_logo_singlecolor_png.png">
 
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500;600;700&display=swap" rel="stylesheet">
@@ -882,7 +883,7 @@
 			<div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
 				<div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
 					<div class="text text-center hero-text">
-						<img src="images/01_text_right_original.png" alt="IDEA LAB logo" class="hero-logo img-fluid">
+							<img src="images/01_text_right_original.png" alt="IDEA LAB logo" class="hero-logo img-fluid">
 						<span class="hero-title-break"></span>
 <!--						<span class="subheading">Hello! Here is</span>-->
 <!--						<h1 class="hero-title"><span class="hero-idea">IDEA LAB</span></h1>-->
@@ -914,7 +915,7 @@
 					<nav id="navi">
 						<ul>
 							<li><a href="#page-1">Team Vision</a></li>
-							<li><a href="#page-2">Research Area</a></li>
+							<li><a href="#page-2">Research Focus</a></li>
 							<li><a href="#page-4">News</a></li>
 						</ul>
 					</nav>
@@ -962,7 +963,7 @@
 					</div>
 
 					<div id="page-2" class="page two">
-						<h2 class="heading">Research Area</h2>
+						<h2 class="heading">Research Focus</h2>
 
 						<div class="home-research-preview ftco-animate">
 							<div class="home-research-media">
